tests/grammar/schema/union/fail/fail_1/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:2:1
  |
2 | _data |= "value"
  | ^ unsupported operand type(s) for |: '[int]' and 'str(value)'
  |